Update hero slogan and value props

--- a/src/i18n/locales/en/landing.json
+++ b/src/i18n/locales/en/landing.json
@@ -14,8 +14,8 @@
   },
   "hero": {
     "badge": "AI-powered annual planning",
-    "title1": "Your year at a glance –",
-    "title2": "make decisions faster",
+    "title1": "Transform your to-do-lists –",
+    "title2": "into circular clarity",
     "description": [
       "When visibility is clear, decisions become confident.",
       "When patterns are obvious, planning becomes strategic.",
