--- a/src/i18n/locales/sv/landing.json
+++ b/src/i18n/locales/sv/landing.json
@@ -14,12 +14,12 @@
   },
   "hero": {
     "badge": "AI-assisterad årsplanering",
-    "title1": "Året i en bild –",
-    "title2": "fatta beslut snabbare",
+    "title1": "Förvandla dina att-göra-listor –",
+    "title2": "till cirkulär överblick",
     "description": [
-      "När överblicken är tydlig blir besluten säkra.",
-      "När mönstren är synliga blir planeringen strategisk.",
-      "När allt hänger ihop fungerar din organisation helt enkelt bättre."
+      "Med tydlig överblick blir besluten enkla.",
+      "Med synliga mönster blir planeringen strategisk.",
+      "När allt hänger ihop fungerar organisationen bättre."
     ],
     "ctaPrimary": "Kom igång gratis",
     "ctaSecondary": "Se demo",
