simplify kanban view

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -430,6 +430,7 @@
     "status": "Status",
     "type": "Type",
     "label": "Label",
+    "unlabeled": "Unlabeled",
     "date": "Date",
     "timeline": "Timeline",
     "delete": "Delete",
