--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -429,6 +429,7 @@
     "status": "Status",
     "type": "Typ",
     "label": "Etikett",
+    "unlabeled": "Utan etikett",
     "date": "Datum",
     "timeline": "Längd",
     "delete": "Ta bort",
