fix translations and year filter in kanban

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -418,6 +418,10 @@
     "start": "Start",
     "end": "End"
   },
+  "kanbanView": {
+    "title": "Kanban View",
+    "subtitle": "Items grouped by labels"
+  },
   "listView": {
     "title": "List View",
     "subtitle": "Activities grouped by rings",
