add list view and timeline demos

--- a/src/i18n/locales/en/landing.json
+++ b/src/i18n/locales/en/landing.json
@@ -55,7 +55,11 @@
     "manualTitle": "Create your year wheel manually",
     "manualDescription": "Click, drag, and organize your activities exactly as you want them.",
     "aiTitle": "Or let the AI do the work",
-    "aiDescription": "Describe what you want to achieve – the AI creates the structure, adds activities, and suggests improvements."
+    "aiDescription": "Describe what you want to achieve – the AI creates the structure, adds activities, and suggests improvements.",
+    "listTitle": "List View - Find Anything Instantly",
+    "listDescription": "Search, filter, and manage all your activities in a structured list format.",
+    "timelineTitle": "Timeline View - Visualize Your Schedule",
+    "timelineDescription": "See all your activities on a horizontal timeline with zoom and pan controls."
   },
   "features": {
     "title": "Everything you need for professional planning",
@@ -272,6 +276,66 @@
       "planning": "Planning",
       "firstActivity": "My first activity"
     }
+  },
+  "listDemo": {
+    "rings": {
+      "campaigns": "Campaigns",
+      "content": "Content"
+    },
+    "items": {
+      "campaign1": "Spring Launch",
+      "campaign2": "Summer Campaign",
+      "campaign3": "Fall Promotion",
+      "campaign4": "Holiday Campaign",
+      "content1": "Blog Posts Q1",
+      "content2": "Video Series",
+      "content3": "Webinar Prep",
+      "content4": "Social Media Plan",
+      "content5": "Newsletter Campaign"
+    },
+    "activities": {
+      "marketing": "Marketing",
+      "sales": "Sales",
+      "content": "Content",
+      "events": "Events"
+    },
+    "searchPlaceholder": "Search activities...",
+    "searchText": "Campaign",
+    "addButton": "Add Activity",
+    "totalActivities": "Total:",
+    "rings": "Rings:",
+    "year": "Year:"
+  },
+  "timelineDemo": {
+    "rings": {
+      "title": "Rings",
+      "campaigns": "Campaigns",
+      "content": "Content"
+    },
+    "items": {
+      "campaign1": "Spring Launch",
+      "campaign2": "Summer Campaign",
+      "campaign3": "Fall Promotion",
+      "content1": "Blog Posts Q1",
+      "content2": "Video Series",
+      "content3": "Social Media Plan"
+    },
+    "months": {
+      "jan": "Jan",
+      "feb": "Feb",
+      "mar": "Mar",
+      "apr": "Apr",
+      "may": "May",
+      "jun": "Jun",
+      "jul": "Jul",
+      "aug": "Aug",
+      "sep": "Sep",
+      "oct": "Oct",
+      "nov": "Nov",
+      "dec": "Dec"
+    },
+    "activities": "activities",
+    "days": "days"
   },
   "footer": {
     "tagline": "Make annual planning simple, clear and effective for the whole team.",
