enhance list demo with add activity and view navigation

--- a/src/i18n/locales/en/landing.json
+++ b/src/i18n/locales/en/landing.json
@@ -301,6 +301,7 @@
     },
     "searchPlaceholder": "Search activities...",
     "searchText": "Campaign",
+    "newActivity": "Black Friday Sale",
     "addButton": "Add Activity",
     "totalActivities": "Total:",
     "rings": "Rings:",
