--- a/src/i18n/locales/sv/landing.json
+++ b/src/i18n/locales/sv/landing.json
@@ -300,6 +300,7 @@
     },
     "searchPlaceholder": "Sök aktiviteter...",
     "searchText": "Kampanj",
+    "newActivity": "Black Friday-rea",
     "addButton": "Lägg till aktivitet",
     "totalActivities": "Totalt:",
     "rings": "Ringar:",
