--- a/src/i18n/locales/sv/editor.json
+++ b/src/i18n/locales/sv/editor.json
@@ -138,6 +138,7 @@
     "cancel": "Avbryt",
     "details": "Detaljer",
     "comments": "Kommentarer",
+    "reminders": "Påminnelser",
     "clusterInfo": "Detta är ett kluster av {{count}} aktiviteter i samma vecka:",
     "clusterZoomHint": "Zooma in för att se enskilda aktiviteter",
     "clusterEditHint": "Zooma in för att redigera enskilda aktiviteter"
