fix features grid layout and add free badges
- Reordered features: free features first (1-6), then premium (7-11)
- Fixed duplicate Version History (was shown twice)
- Added GRATIS/FREE badges to non-premium features
- Fixed syntax error in versionHistory description
- Fixed Google Integration premium badge
- Improved visual consistency with badge styling
- Note: logout already redirects to / (not /auth)

--- a/src/i18n/locales/en/landing.json
+++ b/src/i18n/locales/en/landing.json
@@ -65,6 +65,7 @@
     "title": "Everything you need for professional planning",
     "subtitle": "From strategy to execution – YearWheel gives you the tools to keep your team in sync",
     "premium": "PREMIUM",
+    "free": "FREE",
     "aiAssistant": {
       "title": "AI Planning Assistant",
       "description": "Describe what you want to accomplish in natural language – AI creates the structure, adds activities, detects conflicts, and suggests improvements automatically."
