--- a/src/i18n/locales/sv/landing.json
+++ b/src/i18n/locales/sv/landing.json
@@ -65,6 +65,7 @@
     "title": "Allt du behöver för professionell planering",
     "subtitle": "Från strategi till genomförande – YearWheel ger dig verktygen för att hålla teamet synkat",
     "premium": "PREMIUM",
+    "free": "GRATIS",
     "aiAssistant": {
       "title": "AI-assistent för planering",
       "description": "Beskriv vad du vill åstadkomma i naturligt språk – AI:n skapar strukturen, lägger till aktiviteter, upptäcker konflikter och föreslår förbättringar automatiskt."
